--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "crypto-random-string": "^3.3.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.11.14",
+    "nanoid": "^3.1.20",
     "nodemon": "^2.0.7"
   }
 }
