--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 redis:
   image: redis
   container_name: redis-url-short
-  command: redis-server --requirepass setyourpassword
+  command: redis-server --requirepass setyourpassword && save 60 1
   volumes:
       - /tmp/redis:/data
   ports:
