--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,10 @@
 redis:
-  image: redis
+  image: redis:6.2.1-alpine
   container_name: redis-url-short
-  command: bash -c "redis-server --requirepass setyourpassword && save 30 1"
+  command: redis-server --requirepass setyourpassword
   volumes:
       - /tmp/redis:/data
+      - ./redis.conf:/usr/local/etc/redis/redis.conf
   ports:
     - 6379:6379
 
