--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,13 @@
 redis:
   image: redis:6.2.1-alpine
   container_name: redis-url-short
-  command: redis-server --requirepass setyourpassword /usr/local/etc/redis/redis.conf
+  command: redis-server /usr/local/etc/redis/redis.conf
   volumes:
       - /tmp/redis:/data
       - ./redis.conf:/usr/local/etc/redis/redis.conf
   ports:
     - 6379:6379
+  restart: always
 
 app:
   build: ./
@@ -15,3 +16,4 @@ app:
     - redis
   ports:
     - 80:3000
+  restart: always
