--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ redis:
   command: redis-server /usr/local/etc/redis/redis.conf
   volumes:
       - /etc/redis:/data
-      - ./redis.conf:/usr/local/etc/redis/redis.conf
+      - ./redis/redis.conf:/usr/local/etc/redis/redis.conf
   ports:
     - 6379:6379
   restart: always
